<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/logreg">

    <Button
        android:id="@+id/button6"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg_btn"
        android:layout_below="@+id/btn_take_photo"
        android:layout_centerHorizontal="true"
        android:onClick="regVolun"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/reg_heading"
        android:textColor="#FF0818CD"
        android:textStyle="bold|italic"
        android:textSize="32dp"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/button6"
        android:layout_alignEnd="@+id/button6" />

    <EditText
        android:id="@+id/na1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:layout_marginLeft="64dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/pass1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/pwd"
        android:layout_below="@+id/email1"
        android:layout_alignLeft="@+id/email1"
        android:layout_alignStart="@+id/email1" />

    <EditText
        android:id="@+id/email1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/ea"
        android:layout_below="@+id/na1"
        android:layout_alignLeft="@+id/na1"
        android:layout_alignStart="@+id/na1" />

    <EditText
        android:id="@+id/phnumber1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/phno"
        android:layout_below="@+id/pass1"
        android:layout_alignLeft="@+id/pass1"
        android:layout_alignStart="@+id/pass1" />

    <EditText
        android:id="@+id/address1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:hint="@string/add"
        android:layout_below="@+id/phnumber1"
        android:layout_alignLeft="@+id/phnumber1"
        android:layout_alignStart="@+id/phnumber1" />

    <EditText
        android:id="@+id/identi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/address1"
        android:layout_alignStart="@+id/address1"
        android:layout_below="@+id/address1"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/id"/>
    <ImageView
        android:id="@+id/view_photo"
        android:layout_width="260dp"
        android:layout_height="374dp"
        android:layout_above="@+id/btn_take_photo"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btn_take_photo"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imgup"
        android:layout_below="@+id/identi"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp" />

    <Button
        android:id="@+id/button7"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:text="Cancel"
        android:onClick="onCancelvolun"/>

</RelativeLayout>