<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ase.team1.foodcycled.MainActivity"
    tools:showIn="@layout/activity_open"
    android:background="@drawable/back"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:layout_width="360dp"
        android:layout_height="111dp"
        android:text="@string/tag_line"
        android:textColor="#000000"
        android:textStyle="bold|italic"
        android:textSize="28sp"
        android:id="@+id/textView6"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        android:layout_marginStart="32dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="21dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="32dp" />

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_btn"
        android:onClick="loginpage"
        app:layout_constraintRight_toLeftOf="@+id/button2"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="49dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        android:layout_marginEnd="55dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textView6"
        android:layout_marginLeft="49dp"
        android:layout_marginRight="55dp" />

 <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
     tools:layout_constraintRight_creator="1"
     tools:layout_constraintBottom_creator="1"
     app:layout_constraintBottom_toBottomOf="parent"
     android:layout_marginEnd="20dp"
     app:layout_constraintRight_toRightOf="@+id/button2"
     android:layout_marginBottom="33dp"
     android:layout_marginRight="20dp" />

    <Button
        android:id="@+id/button2"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="registerpage"
        android:text="@string/reg_btn"
        android:layout_marginEnd="80dp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintRight_toRightOf="@+id/textView6"
        android:layout_marginRight="80dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="FOOD-CYCLED"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="38dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="199dp"
        android:layout_height="0dp"
        app:srcCompat="@drawable/log"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="33dp"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>
